--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- Analytics-->
+    <meta name="google-site-verification" content="jBC9o0NgXBZcnZHf7cch5nbQk9tAob5LTNsXuxhd7t0" />
 </head>
 
 <body id="page-top">
