--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Analytics-->
-    <meta name="google-site-verification" content="jBC9o0NgXBZcnZHf7cch5nbQk9tAob5LTNsXuxhd7t0" />
+    <meta name="google-site-verification" content="jBC9o0NgXBZcnZHf7cch5nbQk9tAob5LTNsXuxhd7t0"/>
 </head>
 
 <body id="page-top">
@@ -79,7 +79,7 @@
                             <p class="lead">
                                 I'm passionate about programming, infosec and hacking.<br>
                             </p>
-                            <p class="lead"
+                            <p class="lead">
                                 Currently working as software developer @ Alten Italia and in my spare time I enjoy
                                 programming, discovering and experimenting.<br>
                             </p>
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-        </div>
+
     </section><!-- End About Section -->
 
     <!-- ======= Services ======= -->
