--- a/index.html
+++ b/index.html
@@ -269,34 +269,34 @@
                                         <h3>BASH</h3>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="row" style="margin-top: 20px">
-                                <div class="col-lg-3 col-md-4">
+                                <div class="col-lg-3 col-md-4 mt-4">
                                     <div class="icon-box">
                                         <img src="assets/img/linux.png" alt="">
                                         <h3>Linux</h3>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                                <div class="col-lg-3 col-md-4 mt-4">
                                     <div class="icon-box">
                                         <img src="assets/img/docker.png" alt="">
                                         <h3>Docker</h3>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                                <div class="col-lg-3 col-md-4 mt-4">
                                     <div class="icon-box">
                                         <img src="assets/img/kubernetes.png" alt="">
                                         <h3>Kubernetes</h3>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+                                <div class="col-lg-3 col-md-4 mt-4">
                                     <div class="icon-box">
                                         <img src="assets/img/jenkins.png" alt="">
                                         <h3>Jenkins</h3>
                                     </div>
                                 </div>
                             </div>
+
+
                         </div>
                     </div>
                 </div>
