--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                         <h3>Android</h3>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                                     <div class="icon-box">
                                         <img src="assets/img/bash.png" alt="">
                                         <h3>BASH</h3>
@@ -295,8 +295,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
@@ -304,6 +302,49 @@
         </div>
     </section><!-- End Interest Section -->
 
+    <!-- ======= Interest ======= -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="interests box-shadow-full">
+                        <div class="about-me pt-4 pt-md-0">
+                            <div class="section-title">
+                                <h2>Technologies</h2>
+                                <p>Other interests</p>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4">
+                                    <div class="icon-box">
+                                        <img src="assets/img/python.png" alt="">
+                                        <h3>Python</h3>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-4">
+                                    <div class="icon-box">
+                                        <img src="assets/img/golang.png" alt="">
+                                        <h3>GoLang</h3>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                                    <div class="icon-box">
+                                        <img src="assets/img/opencv.png" alt="">
+                                        <h3>OpenCV</h3>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+                                    <div class="icon-box">
+                                        <img src="assets/img/firefox.png" alt="">
+                                        <h3>Firefox Extensions</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- End Interest Section -->
 
     <!-- ======= Contact Section ======= -->
     <section class="contact">
@@ -348,6 +389,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section><!-- End Contact Section -->
 
 </main><!-- End #main -->
