--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                 <div class="col-md-6 d-flex align-items-stretch">
                                     <div class="info-box">
                                         <i class="bx bx-envelope"></i>
-                                        <h3>My Email</h3>
+                                        <h3>Email</h3>
                                         <p>robertomanfreda1994@gmail.com</p>
                                     </div>
                                 </div>
