--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- ======= Header/ Navbar ======= -->
 <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll" href="#page-top"><img src="assets/img/logo-roberto-manfreda.png" alt=""></a>
+        <a class="navbar-brand js-scroll" href="#page-top"><img class="logo" src="assets/img/logo-roberto-manfreda.png" alt=""></a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
                 aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span></span>
@@ -53,6 +53,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="#service">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#technologies">TECHNOLOGIES</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="#contact">CONTACT</a>
@@ -303,7 +306,7 @@
     </section><!-- End Interest Section -->
 
     <!-- ======= Interest ======= -->
-    <section>
+    <section id="technologies">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
