--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
                                 <p>Other interests</p>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-4">
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                                     <div class="icon-box">
                                         <img src="assets/img/python.png" alt="">
                                         <h3>Python</h3>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-4">
+                                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                                     <div class="icon-box">
                                         <img src="assets/img/golang.png" alt="">
                                         <h3>GoLang</h3>
