--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
                                 </div>
                                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                                     <div class="icon-box">
-                                        <img src="assets/img/golang.png" alt="">
-                                        <h3>GoLang</h3>
+                                        <!--img src="assets/img/golang.png" alt=""-->
+                                        <h3>Kafka</h3>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
